tests/fail/while_with_record_condition.tig
let
    type person = { name: string, age: int }
    var a:= person { name="name", age=5 }
in
    while a do print("b")
end
